# portwatch

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  EXAMPLES.md  FAQ.md  USAGE.md
src/portwatch/: __init__.py  cli.py  formatters.py  history.py  scanner.py  watch.py
tests/: conftest.py  test_cli.py  test_history.py  test_scanner.py
