[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "portwatch"
version = "0.1.0"
description = "Track which processes hold which TCP/UDP ports on macOS and Linux."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "farkhad" }]
dependencies = [
    "click>=8.1",
    "rich>=15.0.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
portwatch = "portwatch.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/portwatch"]
